fixes deep linking where images load after the jump

--- a/docs/less/docs.less
+++ b/docs/less/docs.less
@@ -504,3 +504,6 @@ pre[class*="language-"] {
   animation-name: bounceIn;
 }
 
+.card img {
+  min-height: 180px;
+}
